tests/baselines/reference/inferenceFromParameterlessLambda.errors.txt
tests/cases/compiler/inferenceFromParameterlessLambda.ts(9,12): error TS2339: Property 'length' does not exist on type '{}'.


==== tests/cases/compiler/inferenceFromParameterlessLambda.ts (1 errors) ====
    function foo<T>(o: Take<T>, i: Make<T>) { }
    interface Make<T> {
        (): T;
    }
    interface Take<T> {
        (n: T): void;
    }
    // Infer string from second argument because it isn't context sensitive
    foo(n => n.length, () => 'hi');
               ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
    